# ai-agent-chrome-extention

./: .gitignore  Procfile  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: .gitignore  .replit  pyproject.toml
backend/backend/: .replit  main.py
backend/tests/: test_endpoint.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js  setupProxy.js
src/: __init__.py  main.py
tests/: test_endpoint.py  test_negotiation.py
